# stregsystemet-tui

./: Cargo.toml  LICENSE  README.md
src/: error.rs  main.rs
src/api/: client.rs  endpoints.rs
src/app/: actions.rs  mod.rs  state.rs
src/app/modals/: error.rs  mod.rs  parking.rs  purchase.rs  qr_payment.rs  search.rs  terminal_size.rs  username.rs
src/config/: settings.rs  store.rs
src/models/: member.rs  mod.rs  product.rs  sale.rs
src/parking/: mod.rs  vehicle_info.rs
src/qr/: mod.rs  payment_qr.rs
src/ui/: events.rs  layout.rs  mod.rs  render.rs
src/ui/components/: header.rs  mod.rs  products_list.rs  user_panel.rs
src/ui/components/helpers/: error.rs  layout.rs
src/ui/components/modals/: error.rs  mod.rs  parking.rs  purchase.rs  qr_payment.rs  search.rs  terminal_size.rs  username.rs
src/utils/: formatters.rs  helpers.rs  mod.rs  money.rs
